for version 4.8
    - Scrolling (mouse scroll wheel event) on icon can raise and iconify
      window.
    - Add option -e option to specify pattern matching type.
      Accepts n = normal, r = regex, u = unix wildcard, w = wildcard,
      x = xml schema 1.1.
    - Add option -j to enable case senstive matching.
    - Add option -k to set regex minimal matching.

for version 4.7
    - Fix install location of icon referenced by .desktop file so that it
      shows properly.
    - Fix bug where build fails with GCC-4.7.

for version 4.6
    - Fix bug with windows not showing after being restored when KWin is the
      WM.
    - Fix bug with restored windows not gaining focus when KWin is the WM.

for version 4.5
    - Change -n option behavior:
      - -n now acts as -n -y.
      - Name matching now matches any running application. Previously it would
        only match when launching an application.
    - Remove -y option.
    - Change a number of casts from C style to C++ style.

for version 4.4
    - Remove window manager decoration close button can optionally iconify. It
      ended up causing many issues. Fixes:
      - Drag and drop.
      - Moving borderless windows (chrome).
      - Windows moving slightly when undocking.
      - Focus bug (#600045).
    - Remove -c option.
    - Add help text for -i option.
    - Update INSTALL.
    - Default install path is now /usr instead of /usr/local.

for version 4.3
    - Use QtSingleApplication.
    - Window manager decoration close button can optionally iconify.
    - Changed command line option -c: Disables WM close button iconify.
    - Restructure large parts of the appplication.

for version 4.2.2
    - Fix installing translation files.

for version 4.2.1
    - Fix type in .pro file that prevents all files from installing.

for version 4.2
    - Fix disabling balloon title changes menu option.
    - Ignore docked windows and continue looking when matching command by name
      and when matching by specified pid.