@@ -29,6 +29,11 @@
 
 #include <X11/Xlib.h>
 
+#define ARG_MAX_LEN 30
+#define ARG_PRE_PAD 2
+#define ARG_POST_PAD 2
+#define MAX_HELP_LINE_LEN 79
+
 KDocker::KDocker() {
     m_trayItemManager = new TrayItemManager();
 }
@@ -101,6 +106,73 @@ void KDocker::preProcessCommand(int argc, char **argv) {
     }
 }
 
+// It would be much faster to just format help args appropriately but that would put
+// require that translators put new lines in the translation. We just run the args
+// through this function to format the text properly so they don't have to worry
+// about it.
+QString KDocker::formatHelpArgs(QList<QPair<QString, QString> > commands) {
+    int padding = 0;
+    QString out;
+
+    // Figure out what the loggest arg but we have a max length.
+    for (int i = 0; i < commands.count(); ++i) {
+        int length = commands.at(i).first.length();
+        if (length > padding && length < ARG_MAX_LEN) {
+            padding = length;
+        }
+    }
+    // We pad spaces before and after the longest arg.
+    padding += ARG_PRE_PAD + ARG_POST_PAD;
+
+    // Build a formatted string from the arg and its description.
+    for (int i = 0; i < commands.count(); ++i) {
+        QString arg = commands.at(i).first;
+        QString desc = commands.at(i).second;
+        
+        // Add the arg to the output. If it's over our max arg length
+        // start the description on a new line.
+        out += QString(' ').repeated(ARG_PRE_PAD);
+        if (arg.length() < ARG_MAX_LEN) {
+            out += arg.leftJustified(padding - ARG_PRE_PAD, ' ');
+        } else {
+            out += arg + "\n";
+            out += QString(' ').repeated(padding);
+        }
+
+        int desc_len = desc.length();
+        int last_offset = 0;
+        int offset = 0;
+        // Move forward in the string then back until we hit a space to break at.
+        // If we don't find a space in the segment force a split.
+        while (offset < desc_len) {
+            if (offset != 0) {
+                out += QString(' ').repeated(padding);
+            }
+
+            offset += MAX_HELP_LINE_LEN - padding;
+            if (offset < desc_len) {
+                while (desc.at(offset) != ' ' && offset > last_offset) {
+                    offset--;
+                }
+                if (offset == last_offset) {
+                    offset += MAX_HELP_LINE_LEN - padding;
+                }
+            } else {
+                offset = desc_len;
+            }
+
+            out += desc.mid(last_offset, offset - last_offset) + '\n';
+            // Skip any spaces because we're going to start on a new line.
+            while (desc.at(offset) == ' ' && offset < desc_len) {
+                offset++;
+            }
+            last_offset = offset;
+        }
+    }
+
+    return out;
+}
+
 void KDocker::printAbout() {
     QTextStream out(stdout);
 
@@ -109,6 +181,7 @@ void KDocker::printAbout() {
 
 void KDocker::printHelp() {
     QTextStream out(stdout);
+    QList<QPair<QString, QString> > commands;
 
     out << tr("Usage: %1 [options] [command] -- [command options]").arg(qApp->applicationName().toLower()) << endl;
     out << tr("Docks any application into the system tray") << endl;
@@ -118,27 +191,30 @@ void KDocker::printHelp() {
     out << tr("Use -- after command to specify options for command") << endl;
     out << endl;
     out << tr("Options") << endl;
-    out << "-a     \t" << tr("Show author information") << endl;
-    out << "-b     \t" << tr("Don't warn about non-normal windows (blind mode)") << endl;
-    out << "-d secs\t" << tr("Maximum time in seconds to allow for command to start and open a window (defaults to 5 sec)") << endl;
-    out << "-e type\t" << tr("Name matting syntax. Choices are 'n', 'r', 'u', 'w', 'x'. n = normal, substring matching (default). r = regex. u = unix wildcard. w = wildcard. x = W3C XML Schema 1.1.") << endl;
-    out << "-f     \t" << tr("Dock window that has focus (active window)") << endl;
-    out << "-h     \t" << tr("Display this help") << endl;
-    out << "-i file\t" << tr("Set the tray icon to file") << endl;
-    out << "-j     \t" << tr("Case senstive name (title) matching") << endl;
-    out << "-k     \t" << tr("Regex minimal matching") << endl;
-    out << "-l     \t" << tr("Iconify when focus lost") << endl;
-    out << "-m     \t" << tr("Keep application window showing (dont hide on dock)") << endl;
-    out << "-n name\t" << tr("Match window based on window title") << endl;
-    out << "-o     \t" << tr("Iconify when obscured") << endl;
-    out << "-p secs\t" << tr("Set ballooning timeout (popup time)") << endl;
-    out << "-q     \t" << tr("Disable ballooning title changes (quiet)") << endl;
-    out << "-r     \t" << tr("Remove this application from the pager") << endl;
-    out << "-s     \t" << tr("Make the window sticky (appears on all desktops)") << endl;
-    out << "-t     \t" << tr("Remove this application from the taskbar") << endl;
-    out << "-v     \t" << tr("Display version") << endl;
-    out << "-w wid \t" << tr("Window id of the application to dock. Assumes hex number of the form 0x###...") << endl;
-    out << "-x pid \t" << tr("Process id of the application to dock. Assumes decimal number of the form ###...") << endl;
+
+    commands.append(qMakePair(QString("-a"),      tr("Show author information")));
+    commands.append(qMakePair(QString("-b"),      tr("Don't warn about non-normal windows (blind mode)")));
+    commands.append(qMakePair(QString("-d secs"), tr("Maximum time in seconds to allow for command to start and open a window (defaults to 5 sec)")));
+    commands.append(qMakePair(QString("-e type"), tr("Name matting syntax. Choices are 'n', 'r', 'u', 'w', 'x'. n = normal, substring matching (default). r = regex. u = unix wildcard. w = wildcard. x = W3C XML Schema 1.1.")));
+    commands.append(qMakePair(QString("-f"),      tr("Dock window that has focus (active window)")));
+    commands.append(qMakePair(QString("-h"),      tr("Display this help")));
+    commands.append(qMakePair(QString("-i file"), tr("Set the tray icon to file")));
+    commands.append(qMakePair(QString("-j"),      tr("Case senstive name (title) matching")));
+    commands.append(qMakePair(QString("-k"),      tr("Regex minimal matching")));
+    commands.append(qMakePair(QString("-l"),      tr("Iconify when focus lost")));
+    commands.append(qMakePair(QString("-m"),      tr("Keep application window showing (dont hide on dock)")));
+    commands.append(qMakePair(QString("-n name"), tr("Match window based on window title")));
+    commands.append(qMakePair(QString("-o"),      tr("Iconify when obscured")));
+    commands.append(qMakePair(QString("-p secs"), tr("Set ballooning timeout (popup time)")));
+    commands.append(qMakePair(QString("-q"),      tr("Disable ballooning title changes (quiet)")));
+    commands.append(qMakePair(QString("-r"),      tr("Remove this application from the pager")));
+    commands.append(qMakePair(QString("-s"),      tr("Make the window sticky (appears on all desktops)")));
+    commands.append(qMakePair(QString("-t"),      tr("Remove this application from the taskbar")));
+    commands.append(qMakePair(QString("-v"),      tr("Display version")));
+    commands.append(qMakePair(QString("-w wid"),  tr("Window id of the application to dock. Assumes hex number of the form 0x###...")));
+    commands.append(qMakePair(QString("-x pid"),  tr("Process id of the application to dock. Assumes decimal number of the form ###...")));
+    out << formatHelpArgs(commands);
+
     out << endl;
     out << tr("Bugs and wishes to https://bugs.launchpad.net/kdocker") << endl;
     out << tr("Project information at https://launchpad.net/kdocker") << endl;
